# Hartree-Fork

./: .gitignore  CMakeLists.txt  README.md  a.out  main_geom.cpp  main_scf.cpp  scf.cpp
check_calculations_python/: densityMatrix2chgcar.py  h2.CHGCAR  h2_mo1.CHGCAR  matrix.ipynb  np.ipynb  plot_density_matrix.ipynb  project4.ipynb  project4.py  read_last_line  read_last_line.cpp  test.CHGCAR
check_calculations_python/read_last_line.dSYM/Contents/: Info.plist
check_calculations_python/read_last_line.dSYM/Contents/Resources/DWARF/: read_last_line
check_calculations_python/read_last_line.dSYM/Contents/Resources/Relocations/aarch64/: read_last_line.yml
data/: pyscf_calc.py
include/: constants.h  constants.h.gch  molecule.h  point.h  scf.h
src/: CMakeLists.txt  main_scf.cpp  molecule.cpp  point.cpp  scf.cpp
tests/: CMakeLists.txt  re_CMakeLists.txt  test.cpp
visualization/: 0.CHGCAR  0.vesta  1.CHGCAR  2.CHGCAR  3.CHGCAR  3.vesta  4.CHGCAR  5.CHGCAR  6.CHGCAR  7.CHGCAR  7.vesta  8.CHGCAR  9.CHGCAR  densityMatrix2chgcar.py  reuse_vesta.sh
